==> huarteto/NetBeans/Desktop/Uni segundo/Uni seg/Uni segundo/Segundo Cuatri/ARM/ARM 2/Boards/NOHAU/LPC2800/USBMem/usbhw.c <==
#include <LPC288x.h>                    /* LPC288x definitions */
#include "type.h"
#include "usb.h"
#include "usbcfg.h"
#include "usbhw.h"
#include "usbcore.h"
#include "usbuser.h"
#define EIX_DIR         0x01
#define EIX_SEL_EP0SET  0x20
#define ETYPE_CTRL      0x00
#define ETYPE_ISO       0x01
#define ETYPE_BULK      0x02
#define ETYPE_INT       0x03
#define ETYPE_DBLBUF    0x04
#define ETYPE_EP_ENAB   0x08
#define ETYPE_DIS_EOT   0x10
#define ECTRL_STALL     0x01
#define ECTRL_STATUS    0x02
#define ECTRL_DATA      0x04
#define ECTRL_CLRBUF    0x10
#define ECTRL_BUFFULL   0x20
#define IRQ_TABLE_BASE  0x40D000
#define EP_MSK_CTRL     0x0001          /* Control Endpoint Mask */
#define EP_MSK_BULK     0xC924          /* Bulk Endpoint Mask */
#define EP_MSK_INT      0x4492          /* Interrupt Endpoint Mask */
#define EP_MSK_ISO      0x1248          /* Isochronous Endpoint Mask */

void USB_Init (void) {

  USBDevAdr = 0x00;
  USBIntCfg = 0xFC;

  USBMode &= ~(1 << 0);                 // SOFTCT = 0

  // Put IRQ handler address to IRQ table
  *(DWORD *)(IRQ_TABLE_BASE |  (26 << 3)     ) = (DWORD) USB_ISR;
  // Put IRQ priority to IRQ table (not used in this system)
  *(DWORD *)(IRQ_TABLE_BASE | ((26 << 3) + 4)) = 1;

  // Set interrupt request settings for USB interrupt
  INT_REQ26 = (1<<28) | (1<<27) | (1<<26) | (1<<16) | 0x1;

  // Set VECTOR0 table address to IRQ table start
  INT_VECTOR0=IRQ_TABLE_BASE & 0xFFFFF800;

  USB_Reset();
  USB_SetAddress(0);

  USBMode |= (1 << 0);                  // SOFTCT = 1

  USBMode |= ((0x1<<3)|(0x1<<7));       // Set GIE, CLKAON
}

void USB_Reset (void) {

  USB_HighSpeed = FALSE;
  USBLock    = 0xAA37;

  USBClkEn   = 1;                       // Documentation error in USB chapter
                                        // On master reset, this bit needs to set again.
  USBEIX = EIX_SEL_EP0SET;              // EP0 set up register
  USBIntClr  = 0x000000FF;

  USBEIntClr = 0xFFFF;
  USBEIntE  |= 0xFFFF;

#if USB_DMA
  UDMACtrl    = 0x01;                   // Enable DMA operation
  UDMASoftRes = 0x03;                   // Soft reset to both DMA channel

  UDMAIntClr  = 0x00000066;             // clear EOT and Error for CH0 and CH1
  while (UDMAStat & 0x0707);            // Wait if both channels are not idle.

  UDMAIntEn = 0x44;                     /* Due to the nature of the RAM drive,
                                           polling on the EOT make the code more
                                           readable and easy to maintain. */
//UDMAIntEn = 0x66;                     // Enable both EOT and Error
#endif

  USBIntE  = 0x000000B9;                /* no SOF, PSOF, and DMA */

#if USB_DMA
  USBIntE |= 0x40;                      /* Enable DMA bit */
#endif
}

void USB_SetAddress (DWORD adr) {
  USBDevAdr = (1<<7) | adr;
}

void USB_ConfigEP (USB_ENDPOINT_DESCRIPTOR *pEPD) {
  DWORD ep_addr;

  ep_addr = pEPD->bEndpointAddress;
  if (ep_addr & 0x80) {
    ep_addr = ((ep_addr & 0x7F) << 1) | EIX_DIR;
  } else {
    ep_addr =   ep_addr << 1;
  }
  USBEIX = ep_addr;

  USBEType = (pEPD->bmAttributes & 0x001F) | 0x0010;

  USBEMaxSize = pEPD->wMaxPacketSize & 0x03FF;
}

void USB_EnableEP (DWORD EPNum) {
  DWORD ep_addr;

  if (EPNum & 0x80) {
    ep_addr = ((EPNum&0x7F) << 1) | EIX_DIR;    // IN
  } else {
    ep_addr =  (EPNum&0x7F) << 1;               // OUT
  }
  USBEIX = ep_addr;
  USBEType |= ETYPE_EP_ENAB;
}

void USB_DisableEP (DWORD EPNum) {
  DWORD ep_addr;

  if (EPNum & 0x80) {
    ep_addr = ((EPNum&0x7F) << 1) | EIX_DIR;    // IN
  } else {
    ep_addr =  (EPNum&0x7F) << 1;               // OUT
  }
  USBEIX = ep_addr;
  USBEType &= ~ETYPE_EP_ENAB;
}

void USB_SetStallEP (DWORD EPNum) {
  DWORD ep_addr;

  if (EPNum & 0x80) {
    ep_addr = ((EPNum&0x7F) << 1) | EIX_DIR;    // IN
  } else {
    ep_addr =  (EPNum&0x7F) << 1;               // OUT
  }
  USBEIX = ep_addr;
  USBECtrl |= (1 << 0);
}

void USB_ClrStallEP (DWORD EPNum) {
  DWORD ep_addr;

  if (EPNum & 0x80) {
    ep_addr = ((EPNum&0x7F) << 1) | EIX_DIR;    // IN
  } else {
    ep_addr =  (EPNum&0x7F) << 1;               // OUT
  }
  USBEIX = ep_addr;
  USBECtrl &= ~(1 << 0);
}

DWORD USB_ReadEP (DWORD EPNum, BYTE *pData) {
  DWORD cnt, n;

  USBEIX    = ((EPNum & 0x0F) << 1) | ((EPNum >> 7) & 0x01);
  USBECtrl |=  ECTRL_DATA;              // set DATA bit
  cnt = USBDCnt;
  for (n = 0; n < (cnt + 3) / 4; n++) {
    *((__packed DWORD *)pData) = USBData;
    pData += 4;
  }
  USBECtrl &= ~ECTRL_DATA;              // clear DATA bit
  USBECtrl |=  ECTRL_CLRBUF;            // clear buffer
  return (cnt);
}

DWORD USB_WriteEP (DWORD EPNum, BYTE *pData, DWORD cnt) {
  DWORD n;

  USBEIX    = ((EPNum & 0x0F) << 1) | ((EPNum >> 7) & 0x01);
  USBECtrl |=  ECTRL_DATA;              // set DATA bit
  USBDCnt   = cnt;
  for (n = 0; n < (cnt + 3) / 4; n++) {
    while (USBECtrl & ECTRL_BUFFULL);
    USBData = *((__packed DWORD *)pData);
    pData += 4;
  }
  USBECtrl &= ~ECTRL_DATA;              // clear DATA bit
  return (cnt);
}

DWORD USB_GetFrame (void) {
  DWORD val;

  val = USBFN;
  return (val);
}
